<resources>
    <string name="app_name">Arch Playground</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>

    <string name="filter_all">All</string>
    <string name="filter_active">Active</string>
    <string name="filter_completed">Completed</string>

    <string name="option_edit">Edit</string>
    <string name="option_delete">Delete</string>

    <string name="menu_no_arch">no arch</string>
    <string name="menu_mvp">learning mvp</string>
    <string name="menu_mvvm_data_binding">learning mvvm with data binding</string>
    <string name="menu_mvvm_rxjava">learning mvvm with rxjava</string>
    <string name="menu_mvpvm_rxjava">learning mvp-vm with rxjava</string>
    <string name="menu_mvp_rx_java">learning mvp with rxjava</string>

    <string name="menu_todo_mvpvm">learning todo mvp-vm</string>
    <string name="add_todo_hint">Input title of your todo here</string>

    <string name="no_tasks_all">You have no TO-DOs!</string>
    <string name="no_tasks_add">Add a TO-DO item +</string>
</resources>
