<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_no_arch" />
        <item
            android:id="@+id/nav_mvp"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_mvp" />
        <item
            android:id="@+id/nav_mvvm_data_binding"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_mvvm_data_binding" />
        <item
            android:id="@+id/nav_mvvm_rxjava"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_mvvm_rxjava" />
        <item
            android:id="@+id/nav_mvpvm_rxjava"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_mvpvm_rxjava" />
        <item
            android:id="@+id/nav_mvp_rxjava"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_mvp_rx_java" />
    </group>

    <!--<item android:title="Communicate">-->
    <!--<menu>-->

    <!--<item-->
    <!--android:id="@+id/nav_send"-->
    <!--android:icon="@drawable/ic_menu_send"-->
    <!--android:title="Send" />-->
    <!--</menu>-->
    <!--</item>-->

</menu>
